--- a/01_Introduction_to_HTML_CSS/01_html_lab/10_semantic_tags_figure_figcaption/semantic-tags-part4.html
+++ b/01_Introduction_to_HTML_CSS/01_html_lab/10_semantic_tags_figure_figcaption/semantic-tags-part4.html
@@ -9,7 +9,7 @@
 
 <body>
     <figure>
-        <img src="kitten.jpg">
+        <img src="https://images.unsplash.com/photo-1498336179775-9836baef8fdf?q=60&w=200&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
         <figcaption>Fluffy Kitten</figcaption>
     </figure>
 </body>
