--- a/01_Introduction_to_HTML_CSS/01_html_lab/06_images/images.html
+++ b/01_Introduction_to_HTML_CSS/01_html_lab/06_images/images.html
@@ -16,30 +16,30 @@
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea excepturi earum dignissimos distinctio aliquid,
         fugiat harum dolores at incidunt sit. Autem perspiciatis quos maxime iste ipsa ipsam minus laboriosam veritatis.
     </p>
-    <img src="./images/img1.jpg" />
+    <img src="https://images.unsplash.com/photo-1723743640863-4984aa9d78b7?q=60&w=200&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" />
     <p>
         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut vitae vel hic accusantium atque, consequatur
         excepturi sint sapiente! Explicabo cupiditate eveniet dolores adipisci hic unde sit est repellat blanditiis
         laudantium.
     </p>
-    <img src="./images/img2.jpg" />
+    <img src="https://images.unsplash.com/photo-1723202798753-4ad26883c510?q=60&w=200&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" />
     <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim illum perferendis repellendus qui laudantium
         fugiat! Quo doloribus harum neque, nesciunt ex, dolorum nostrum delectus saepe iure eius ea numquam? Vero!
     </p>
 
     <h2>Images next to each other</h2>
-    <img src="./images/img3.jpg">
-    <img src="./images/img4.jpg">
-    <img src="./images/img5.jpg">
-    <img src="./images/img6.jpg">
+    <img src="https://images.unsplash.com/photo-1723202798753-4ad26883c510?q=60&w=200&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
+    <img src="https://images.unsplash.com/photo-1723202798753-4ad26883c510?q=60&w=200&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
+    <img src="https://images.unsplash.com/photo-1723202798753-4ad26883c510?q=60&w=200&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
+    <img src="https://images.unsplash.com/photo-1723202798753-4ad26883c510?q=60&w=200&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
 
     <h2>Images Gallery (List of images)</h2>
     <ul>
-        <li><img src="./images/img3.jpg"></li>
-        <li><img src="./images/img4.jpg"></li>
-        <li><img src="./images/img5.jpg"></li>
-        <li><img src="./images/img6.jpg"></li>
+        <li><img src="https://images.unsplash.com/photo-1723149500877-69d4a956ea97?q=60&w=200&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"></li>
+        <li><img src="https://images.unsplash.com/photo-1723149500877-69d4a956ea97?q=60&w=200&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"></li>
+        <li><img src="https://images.unsplash.com/photo-1723149500877-69d4a956ea97?q=60&w=200&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"></li>
+        <li><img src="https://images.unsplash.com/photo-1723149500877-69d4a956ea97?q=60&w=200&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"></li>
     </ul>
 
 </body>
