Edited .main-info in the html

--- a/Exams_Practise/August_2024/01_work_experience/work_experience.html
+++ b/Exams_Practise/August_2024/01_work_experience/work_experience.html
@@ -15,27 +15,10 @@
         <section class="personal-info">
             <div class="main-info">
                 <h2>Jane Doe</h2>
-
-                <div class="main-info-item">
-                    <i class="fa-solid fa-briefcase"></i>
-                    <span>Designer</span>
-                </div>
-
-                <div class="main-info-item">
-                    <i class="fa-solid fa-house"></i>
-                    <span>London, UK</span>
-                </div>
-
-                <div class="main-info-item">
-                    <i class="fa-solid fa-envelope"></i>
-                    <span>ex@mail.com</span>
-                </div>
-
-                <div class="main-info-item">
-                    <i class="fa-solid fa-phone"></i>
-                    <span>1224435534</span>
-                </div>
-
+                <p><i class="fa-solid fa-briefcase"></i>Designer</p>
+                <p><i class="fa-solid fa-house"></i>London, UK</p>
+                <p><i class="fa-solid fa-envelope"></i>ex@mail.com</p>
+                <p><i class="fa-solid fa-phone"></i>1224435534</p>
             </div>
             <div class="skills-info">
                 <p class="skill">Adobe Photoshop</p>
